[gd_scene load_steps=5 format=3 uid="uid://dxansh5qroafh"]

[ext_resource type="Script" path="res://scripts/entities/base_character.gd" id="1_m7c4m"]
[ext_resource type="Script" path="res://test/StaggerTest.gd" id="1_t8qx8"]
[ext_resource type="Script" path="res://scripts/components/stagger_component.gd" id="2_1d0ve"]
[ext_resource type="PackedScene" uid="uid://g4ueol52f1e8" path="res://scene/ui/StaggerMeter.tscn" id="4_ej4wu"]

[node name="StaggerTest" type="Node2D"]
position = Vector2(576, 323)
script = ExtResource("1_t8qx8")

[node name="TestCharacter" type="Node2D" parent="."]
script = ExtResource("1_m7c4m")

[node name="StaggerComponent" type="Node" parent="TestCharacter"]
script = ExtResource("2_1d0ve")
stagger_value = 50.0

[node name="Sprite2D" type="Sprite2D" parent="TestCharacter"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="TestCharacter"]

[node name="EffectsContainer" type="Node2D" parent="TestCharacter"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIContainer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StaggerMeter" parent="UI/UIContainer" instance=ExtResource("4_ej4wu")]
layout_mode = 1
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0

[node name="ApplyStaggerButton" type="Button" parent="UI/UIContainer"]
layout_mode = 0
offset_left = 179.0
offset_top = 343.0
offset_right = 329.0
offset_bottom = 393.0
text = "Apply Stagger"

[node name="ReduceStaggerButton" type="Button" parent="UI/UIContainer"]
layout_mode = 0
offset_left = 344.0
offset_top = 337.0
offset_right = 494.0
offset_bottom = 387.0
text = "Remove Stagger"

[node name="DamageTypeOption" type="OptionButton" parent="UI/UIContainer"]
layout_mode = 0
offset_left = 195.0
offset_top = 439.0
offset_right = 240.0
offset_bottom = 459.0

[node name="GameCamera" type="Camera2D" parent="."]
